--- a/main.html
+++ b/main.html
@@ -2,30 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Video Speed Scrubber</title>
+  <title>Video Speed Controller</title>
   <style>
     .wrapper { max-width: 780px; margin: auto; }
     .progress { height: 8px; background: #eee; margin: 10px 0; width: 100%; }
     .progress__filled { background: #09f; height: 100%; width: 0%; }
-    .speed-bar { display: inline-block; min-width: 40px; }
+    .speed-bar { display: inline-block; min-width: 40px; margin: 5px; }
     button, input[type=range], input[type=number] { margin: 8px 2px; }
+    #toggle { font-size: 1.5em; }
   </style>
 </head>
 <body>
   <div class="wrapper">
-    <video class="flex" width="765" height="410" id="video" src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
+    <video id="video" src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
     <div class="speed">
       <div class="speed-bar" id="speedBar">1X</div>
     </div>
     <div class="progress">
       <div class="progress__filled" id="progressFilled"></div>
     </div>
-    <button id="toggle">►</button>
+    <button id="toggle">&#9658;</button>
     <input type="range" id="volume" min="0" max="1" step="0.1" value="1">
     <input type="number" id="playbackSpeed" value="1" step="0.1" min="0.2" max="3">
-    <button id="rewind">&laquo;10s</button>
-    <button id="skip">&raquo;25s</button>
+    <button id="rewind">10s</button>
+    <button id="skip">25s</button>
   </div>
-  <script src="script.js"></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
