--- a/main.html
+++ b/main.html
@@ -2,30 +2,73 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Video Speed Controller</title>
+  <title>Custom Video Player</title>
   <style>
-    .wrapper { max-width: 780px; margin: auto; }
-    .progress { height: 8px; background: #eee; margin: 10px 0; width: 100%; }
-    .progress__filled { background: #09f; height: 100%; width: 0%; }
-    .speed-bar { display: inline-block; min-width: 40px; margin: 5px; }
-    button, input[type=range], input[type=number] { margin: 8px 2px; }
-    #toggle { font-size: 1.5em; }
+    .video-container {
+      position: relative;
+      width: 765px;
+      margin: auto;
+      background: #222;
+    }
+    #video {
+      width: 100%;
+      display: block;
+    }
+    .controls {
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 5px;
+      padding: 10px;
+      background: rgba(30,30,30,0.85);
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+    .progress {
+      flex: 1 1 auto;
+      height: 8px;
+      background: #eee;
+      margin: 0 8px;
+      border-radius: 4px;
+      overflow: hidden;
+      cursor: pointer;
+    }
+    .progress__filled {
+      background: #09f;
+      height: 100%;
+      width: 0%;
+      transition: width 0.2s;
+    }
+    .speed-bar {
+      min-width: 38px;
+      color: #ffa;
+    }
+    button, input[type=range], input[type=number] {
+      background: #444;
+      border: none;
+      color: #fff;
+      padding: 4px 10px;
+      border-radius: 4px;
+    }
+    button:active { background: #09f; }
+    #toggle { font-size: 1.2em; }
   </style>
 </head>
 <body>
-  <div class="wrapper">
+  <div class="video-container">
     <video id="video" src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
-    <div class="speed">
-      <div class="speed-bar" id="speedBar">1X</div>
+    <div class="controls">
+      <button id="toggle">&#9658;</button>
+      <div class="progress" id="progress">
+        <div class="progress__filled" id="progressFilled"></div>
+      </div>
+      <input type="range" id="volume" min="0" max="1" step="0.1" value="1">
+      <span class="speed-bar" id="speedBar">1X</span>
+      <input type="number" id="playbackSpeed" value="1" step="0.1" min="0.2" max="3">
+      <button id="rewind">10s</button>
+      <button id="skip">25s</button>
     </div>
-    <div class="progress">
-      <div class="progress__filled" id="progressFilled"></div>
-    </div>
-    <button id="toggle">&#9658;</button>
-    <input type="range" id="volume" min="0" max="1" step="0.1" value="1">
-    <input type="number" id="playbackSpeed" value="1" step="0.1" min="0.2" max="3">
-    <button id="rewind">10s</button>
-    <button id="skip">25s</button>
   </div>
   <script src="scripts.js"></script>
 </body>
